--- a/style.css
+++ b/style.css
@@ -9,250 +9,231 @@ Darker version of the color: #2c3969
 Other fitting color: #99aab5
 */
 body {
-    font-family: sans-serif;
-    background-color: #23272a;
-    color:#ffffff;
-    text-align:center;
-    background-size: cover;
-}
-body::-webkit-scrollbar {
-    display: none;
-}
-p {
-    cursor: default;
-}
-#wrapper {
-    padding: 24.8%;
-    cursor: wait;
-}
-#navbar {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    display: flex;
-    background-color: #23272a;
-    padding: 15px;
-    margin: 0px;
-}
-.navbar-item {
-    margin-left: auto;
-    margin-right: auto;
-}
-h1 {
-    color:#7289da;
-    font-weight:bold;
-    font-variant:small-caps;
-    font-size:30pt;
-    cursor: default;
-}
-h2, h3, h4, h5, h6 {
-    color:#7289da;
-    font-weight:bold;
-    font-variant:small-caps;
-    cursor: default;
-}
-#infos {
-    margin-left: 10%;
-    margin-right: 10%;
-}
-#hobbies {
-    transition: cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
-    margin-left: 40%;
-    margin-right: 40%;
-    text-align: justify;
-    cursor: default;
-}
-#hobbies:hover {
-    background-color: #23272af1;
-    padding: 1%;
-    padding-top: 3%;
-    padding-bottom: 3%;
-}
-audio {
-    transition: cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
-    border: #7289da solid 4px;
-    border-radius: 42px;
-    margin-left: auto;
-    margin-right: auto;
-}
-audio:hover {
-    border: #2c3969 ridge 8px;
-}
-.link {
-    color:#99aab5;
-    text-decoration: none;
-}
-a {
-    transition: cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
-}
-.link:hover {
-    color:#7289da;
-    padding: 10px;
-    background-color: rgba(0, 0, 0, 0.8);
-}
-.warning {
-    animation: warning 2s infinite alternate cubic-bezier(0.075, 0.82, 0.165, 1);
-}
-.no_margin_div {
-    margin-top: 0px;
-    margin-bottom: 0px;
-    margin-left: 48%;
-    margin-right: 0%;
-    text-align: left;
-}
-.no_margin_text {
-    display: contents;
-    margin-top: 0px;
-    margin-bottom: 0px;
-}
-.hidden_text {
-    color: #2c2f33;
-    transition: cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
-}
-.hidden_text:hover {
-    color: #ffffff;
-    padding: 3px;
-    background-color: #23272a;
-    border: solid 5px #23272a;
-}
-.normal_text {
-    color: #ffffff;
-}
-#secret {
-    animation: secret-animation 100s linear;
-    text-decoration: none;
-    color: #7289da;
-    padding: 10px;
-    background-color:rgba(0, 0, 0, 0.8);
-    border: ridge #2c3969 5px;
-}
-#secret:before {
-    text-decoration: none;
-    cursor: default;
-}
-#videocollection {
-    display: flex;
-}
-.threeVideos {
-    width: 30%;
-    margin: 0px;
-}
-.video {
-    width: 95%;
-    margin-top: 2%;
-    margin-bottom: 2%;
-    transition: cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
-}
-.video:hover {
-    padding: 2%;
-    background-color: #23272a;
-}
-video {
-    width: 100%;
-}
-#chessbutton {
-    padding: 20px;
-    color: #2c3969;
-    font-weight: bold;
-    background-color: #99aab5;
-    border: solid 6px #7289da;
-    border-radius: 8px;
-}
-#chessbutton:hover {
-    color: #ffffff;
-    background-color: #2c3969;
-    font-weight: bolder;
-    border-style: ridge;
-}
-#infinite_loadingscreen {
-   height:60px;
-   width:60px;
-  position: absolute;
-  top:50%;
-  left:50%;
-  margin: -(60px/2) 0 0 -(60px/2);
-   animation: rotation 1s infinite linear;
-   border:6px solid #7289da63;
-   border-radius:100%;
+    background-color : #23272a;
+    background-size  : cover;
+    color            : #ffffff;
+    font-family      : sans-serif;
+    text-align       : center;
 }
 
-#infinite_loadingscreen:before {
-   content:"";
-   display:block;
-   position:absolute;
-   left:-6px;
-   top:-6px;
-   height:100%;
-   width:100%;
-   border-top:6px solid #7289dad5;
-   border-left:6px solid transparent;
-   border-bottom:6px solid transparent;
-   border-right:6px solid transparent;
-   border-radius:100%;
+body::-webkit-scrollbar {
+    display : none;
 }
+
+p {
+    cursor : default;
+}
+
+#wrapper {
+    cursor  : wait;
+    padding : 24.8%;
+}
+
+#navbar {
+    background-color : #23272a;
+    display          : flex;
+    margin           : 0;
+    padding          : 15px;
+    position         : fixed;
+    top              : 0;
+    width            : 100%;
+}
+
+.navbar-item {
+    margin-left  : auto;
+    margin-right : auto;
+}
+
+h1 {
+    color        : #7289da;
+    cursor       : default;
+    font-size    : 30pt;
+    font-variant : small-caps;
+    font-weight  : bold;
+}
+
+h2, h3, h4, h5, h6 {
+    color        : #7289da;
+    cursor       : default;
+    font-variant : small-caps;
+    font-weight  : bold;
+}
+
+#infos {
+    margin-left  : 10%;
+    margin-right : 10%;
+}
+
+#hobbies {
+    cursor       : default;
+    margin-left  : 40%;
+    margin-right : 40%;
+    text-align   : justify;
+    transition   : cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
+}
+
+#hobbies:hover {
+    background-color : #23272af1;
+    padding          : 3% 1%;
+}
+
+audio {
+    border        : #7289da solid 4px;
+    border-radius : 42px;
+    margin-left   : auto;
+    margin-right  : auto;
+    transition    : cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
+}
+
+audio:hover {
+    border : #2c3969 ridge 8px;
+}
+
+.link {
+    color           : #99aab5;
+    text-decoration : none;
+}
+
+a {
+    transition : cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
+}
+
+.link:hover {
+    background-color : rgba(0, 0, 0, 0.8);
+    color            : #7289da;
+    padding          : 10px;
+}
+
+.warning {
+    animation : warning 2s infinite alternate cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.no_margin_div {
+    margin     : 0 0 0 48%;
+    text-align : left;
+}
+
+.no_margin_text {
+    display       : contents;
+    margin-bottom : 0;
+    margin-top    : 0;
+}
+
+.hidden_text {
+    color      : #2c2f33;
+    transition : cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
+}
+
+.hidden_text:hover {
+    background-color : #23272a;
+    border           : solid 5px #23272a;
+    color            : #ffffff;
+    padding          : 3px;
+}
+
+.normal_text {
+    color : #ffffff;
+}
+
+#secret {
+    animation        : secret-animation 100s linear;
+    background-color : rgba(0, 0, 0, 0.8);
+    border           : ridge #2c3969 5px;
+    color            : #7289da;
+    padding          : 10px;
+    text-decoration  : none;
+}
+
+#secret:before {
+    cursor          : default;
+    text-decoration : none;
+}
+
+#videoCollection {
+    display : flex;
+}
+
+.threeVideos {
+    margin : 0;
+    width  : 30%;
+}
+
+.video {
+    margin-bottom : 2%;
+    margin-top    : 2%;
+    transition    : cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
+    width         : 95%;
+}
+
+.video:hover {
+    background-color : #23272a;
+    padding          : 2%;
+}
+
+video {
+    width : 100%;
+}
+
 .german {
-    display: block;
+    display : block;
 }
+
 .english {
-    display: none;
+    display : none;
 }
-#languageswitcher {
-    position: relative;
-    width: 50px;
-}
-#languageswitcher:before {
-    content: '';
-    position: absolute;
-    width: 50px;
-    height: 25px;
-    background-color: #2c3969;
-    border-radius: 25px;
-}
-#languageswitcher:checked:before {
-    background-color: #7289da;
-}
-#languageswitcher:after {
-    content: '';
-    position: absolute;
-    left: 0px;
-    width: 25px;
-    height: 25px;
-    background-color: #99aab5;
-    border-radius: 25px;
-    transition: cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
-    border: 2px solid #2c3969;
-    box-sizing: border-box;
-}
-#languageswitcher:checked:after {
-    left: 25px;
-    border: 2px solid #7289da;
-    background-color: #ffffff;
-}
-#languageswitcher:checked ~ .german {
-    display: none;
-}
-#languageswitcher:checked ~ .english {
-    display: block;
-}
+
 .blogpost {
-    background-color: #7289DAFF;
-    border-radius: 8px;
-    padding: 4vw;
-    width: 30vw;
-    margin-left: 31vw;
-    color: #2C3969FF;
+    background-color : #7289daff;
+    border-radius    : 8px;
+    color            : #2c3969ff;
+    margin-left      : 31vw;
+    padding          : 4vw;
+    width            : 30vw;
 }
+
 @keyframes warning {
-    from {color: #2c3969}
-    to {color: #7289da}
+    from {
+        color : #2c3969
+    }
+    to {
+        color : #7289da
+    }
 }
+
 @keyframes rotation {
-   from {transform: rotate(0deg);}
-   to {transform: rotate(359deg);}
-  }
+    from {
+        transform : rotate(0deg);
+    }
+    to {
+        transform : rotate(359deg);
+    }
+}
+
 @keyframes secret-animation {
-    0% {color: #2c2f33; padding: 0px; background-color:rgba(0, 0, 0, 0); border: none; cursor: default}
-    95% {color: #2c2f33; padding: 0px; background-color:rgba(0, 0, 0, 0); border: none; cursor: default}
-    98% {color: #7289da; padding: 0px; background-color:rgba(0, 0, 0, 0); border: none; cursor: default}
-    100% {padding: 10px; background-color:rgba(0, 0, 0, 0.8); border: ridge #2c3969 5px}
+    0% {
+        color            : #2c2f33;
+        padding          : 0;
+        background-color : rgba(0, 0, 0, 0);
+        border           : none;
+        cursor           : default
+    }
+    95% {
+        color            : #2c2f33;
+        padding          : 0;
+        background-color : rgba(0, 0, 0, 0);
+        border           : none;
+        cursor           : default
+    }
+    98% {
+        color            : #7289da;
+        padding          : 0;
+        background-color : rgba(0, 0, 0, 0);
+        border           : none;
+        cursor           : default
+    }
+    100% {
+        padding          : 10px;
+        background-color : rgba(0, 0, 0, 0.8);
+        border           : ridge #2c3969 5px
+    }
 }
