--- a/diceattack/style.css
+++ b/diceattack/style.css
@@ -36,7 +36,7 @@
 body {
     overflow: hidden;
     height: 100vh;
-    background-image: url(./media/jpg/background-image.jpg);
+    background-image: url(./media/jpg/background-image.webp);
     background-size: 100vw;
 }
 
@@ -144,7 +144,8 @@ span {
 #game-button {
     font-size: 45pt;
     margin-left: 41vw;
-    background-color: darkgrey;
+    background-color: black;
+    color: white;
     padding: 1vw;
     border: solid 5px;
     border-radius: 8px;
